# python-template-demo

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: deploy.yaml  deploy.yml  deploy_docs.yaml  setup.yaml  test.yaml
docs/src/: index.md  main.md
src/template_demo/: main.py
template_demo/: main.py
tests/: test_main.py
