[project]
name = "python-template-demo"
version = "0.1.0"
description = "A Demo for the light-weight python template."
authors = [{ name = "Moritz Mistol", email = "moritz.mistol@gmail.com" }]
readme = "README.md"
documentation = "https://MoritzM00.github.io/python-template-demo"
repository = "https://github.com/MoritzM00/python-template-demo"
license = "MIT"

[tool.ruff]
line-length = 88
extend-exclude = ["src/template_demo/__init__.py"]

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402"]


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pydocstyle
    "D",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pandas related
    "PD",
]
extend-ignore = ["D203", "D213"]

[too.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
